# VIA_audit

./: .env.example  .gitignore  Makefile  REMEDIATION_SPRINTS.md  aegis_architecture.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  proxy-server.js  qa-test.mjs  start.bat  start.ps1  stop.bat
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  sprint1-ci.yml  sprint10-ci.yml  sprint11-ci.yml  sprint12-ci.yml  sprint13-ci.yml  sprint14-ci.yml  sprint15-ci.yml  sprint16-ci.yml  sprint17-ci.yml  sprint18-ci.yml  sprint19-ci.yml  sprint2-ci.yml  sprint3-ci.yml  sprint4-ci.yml  sprint5-ci.yml  sprint6-ci.yml  sprint7-ci.yml  sprint8-ci.yml  sprint9-ci.yml
frameworks/: ccpa.yaml  cis-controls-v8.yaml  cmmc-2.yaml  dora.yaml  fedramp-moderate.yaml  gdpr.yaml  hipaa.yaml  hitrust-csf.yaml  iso27001-2022.yaml  iso27701.yaml  iso42001-ai.yaml  nis2.yaml  nist-800-53-r5.yaml  nist-csf-2.yaml  pci-dss-4.yaml  soc2-type1.yaml  soc2-type2.yaml  sox-itgc.yaml  ssae18.yaml  swift-csp.yaml
infra/db/: check_rls_coverage.sql  fix_quotes.py  fix_set_config.py  migrate.sh  schema_drift_check.py  seed_demo.sql  seed_fixup.sql  seed_vendors.sql
infra/kafka/: kafka-topics.sh
infra/minio/: minio-init.sh
infra/mlflow/: mlflow-server.sh
infra/pgbouncer/: pgbouncer.ini  userlist.txt
infra/vault/: init-vault.sh  vault-config.hcl
questionnaire-templates/: caiq-v4.json  custom-base.json  sig-lite.json
scripts/: coverage_gate.sh  ts_prune_check.sh
services/_shared/audit_common/: __init__.py  auth.py  db.py  errors.py  logging.py  middleware.py  pyproject.toml
services/ai-agent-service/: Dockerfile  requirements.txt
services/ai-agent-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.proxy.ts  vite.config.ts
services/audit-planning-service/: Dockerfile  requirements.txt
services/audit-planning-ui/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.proxy.ts  vite.config.ts
services/auth-service/: Dockerfile  package.json  requirements.txt  (+1 more)
services/zk-proof-worker/: Cargo.toml  Dockerfile
services/zk-proof-worker/src/: config.rs  kafka_consumer.rs  main.rs  prover.rs  storage.rs  verifier.rs
services/zk-proof-worker/src/circuits/: access_log.rs  mod.rs  sum_threshold.rs
services/zk-proof-worker/tests/: contract_test.rs
(+602 files in other folders)
